1999-04-18  bertrand <Bertrand.Guiheneuf@inria.fr>

	* autogen.sh (PKG_NAME): groomf -> gnome-mailer
