@@ -1,4 +1,11 @@
 1999-04-18  bertrand <Bertrand.Guiheneuf@inria.fr>
 
+	* camel/camel-folder.c: some work
+	* camel/camel-log.c: log system for camel
+	* camel/gstring-util.c: some utilities for GString objects
+	
+
+1999-04-18  bertrand <Bertrand.Guiheneuf@inria.fr>
+
 	* autogen.sh (PKG_NAME): groomf -> gnome-mailer
 
